# atium

./: Cargo.toml  file.txt  improvements.md  test_file.lox
src/: ast.rs  atium.rs  cli.rs  environment.rs  error.rs  impetuous.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  reporter.rs  scanner.rs  token.rs
src/error/: diagnostics.rs
src/parser/: expr.rs  pratt.rs
src/token/: type.rs  value.rs
