[package]
name = "atium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
thiserror = "1.0.40"

[profile.dev.package.backtrace]
opt-level = 3
