[package]
name = "atium"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
colored = "2.0.4"
ordered-float = { version = "4.1.1", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.40"

[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
pedantic = "warn"
